<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sets.activities.PracticeSetActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="88dp"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/cities"
        android:textColor="#000000"
        android:textSize="45sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/iBtnClose"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="28dp"
        android:backgroundTint="#FFFFFF"
        android:contentDescription="@string/exit_set"
        android:scaleX="1.8"
        android:scaleY="1.8"
        android:src="@drawable/baseline_exit_to_app_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/iBtnMic"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="100dp"
        android:background="@drawable/roundcorner"
        android:contentDescription="@string/record_voice"
        android:scaleX="2"
        android:scaleY="2"
        android:src="@drawable/baseline_mic_24"
        app:circularflow_radiusInDP="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iBtnSpeaker" />

    <ImageButton
        android:id="@+id/iBtnSpeaker"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="68dp"
        android:background="@drawable/roundcorner"
        android:contentDescription="@string/record_voice"
        android:scaleX="2"
        android:scaleY="2"
        android:src="@drawable/baseline_volume_up_24"
        app:circularflow_radiusInDP="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvCard" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvPopUp"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#FDFCBB"
        android:visibility="gone"
        app:cardCornerRadius="10dp"
        app:flow_verticalAlign="center"
        app:layout_constraintBottom_toTopOf="@+id/tvCompletedPhrases"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iBtnSpeaker"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/tvResultMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/great_job"
            android:textSize="18sp" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvCard"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginEnd="20dp"
        android:background="@color/white"
        android:backgroundTint="#116DF5"
        android:translationZ="100dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvTitle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.329">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/iBtnNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:backgroundTint="#00FFFFFF"
                android:contentDescription="@string/navigate_to_next_card"
                android:scaleX="2"
                android:scaleY="2"
                android:translationX="0dp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/baseline_navigate_next_24" />

            <ImageButton
                android:id="@+id/iBtnPrev"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:backgroundTint="#00FFFFFF"
                android:contentDescription="@string/navigate_to_next_card"
                android:scaleX="2"
                android:scaleY="2"
                android:translationX="0dp"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/baseline_navigate_before_24" />

            <TextView
                android:id="@+id/tvCardPhrase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal|center_vertical"
                android:text="@string/rome"
                android:textColor="@color/white"
                android:textSize="28sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/iBtnNext"
                app:layout_constraintStart_toEndOf="@+id/iBtnPrev"
                app:layout_constraintTop_toTopOf="parent"
                tools:fontFamily="@font/inter_semibold"
                tools:layout_margin="5dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="48dp"
        android:progress="5"
        android:progressTint="#F1416C"
        android:scaleY="2"
        app:circularflow_defaultRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvCompletedPhrases"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/inter_semibold"
        android:text="Phrase 1 / 20"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/progressBar"
        app:layout_constraintStart_toStartOf="@+id/progressBar" />

</androidx.constraintlayout.widget.ConstraintLayout>